feat: add created at to response
